# vcc

./: README.md  main.c  meson.build  vcc.geany
src/: ast.c  ast.h  common.h  error.h  expr.h  generator.c  generator.h  lexer.c  lexer.h  mem.c  mem.h  meson.build  parser.c  parser.h  stmt.h  symtbl.h  utils.c  utils.h  vcc.h
test/: execute.sh
test/generate/: return.c
test/lex/: cpp_cmt_no_ending.c.test  if_stmt_no_parenthesis.c.test  negative_number.c.test
test/parse/: expr1.c.test  expr_stacks.c.test  nested_if.c.test  return_stmt.c.test
